# projects

./: CMakeLists.txt  Logger.h  README.md  Structure.h  class_connect.cpp  class_connect.h  class_deque.cpp  class_deque.h  class_myqueue.cpp  class_myqueue.h  client.cpp  client.h  enum_commands.h  main.cpp  my_exceptions.h  myqueue.cpp  myqueue.h  newqueue.cpp  newqueue.h  queue_menu.cpp  queue_menu.h  server.cpp  server.h
